browse artists bubbles fix overlap #312

--- a/assets/styles/photographLightbox.css
+++ b/assets/styles/photographLightbox.css
@@ -96,6 +96,7 @@
   background-color: white !important;
 }
 .researchspace-table-widget-holder .griddle-filter .filter-container{
+  width: 99% !important;
   margin-top: 10px !important;
 }
 .researchspace-table-widget-holder .griddle-filter .filter-container .form-control {
@@ -128,6 +129,9 @@ padding-top: 10px;
 }
 #photograph-lightbox .photo-cards{
 background: white !important;
+}
+#photograph-lightbox .photo-cards h2{
+font-size: 22px !important;
 }
 #photograph-lightbox .mirador .researchspace-mirador.mirador-container .layout-slot {
 width: 100% !important;
